# mollyim-android

./: .cursorrules  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .tool-versions  .travis.yml  AndroidManifest.xml  BUILD-INSTRUCTIONS.md  BUILDING.md  BUILD_GUIDE.md  CHANGELOG.md  CRYPTO_UPGRADE.md  DOCKER_BUILD.md  DOCKER_QUICKSTART.md  Dockerfile  FINAL_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_STATUS.md  IOS_PORT_ROADMAP.md  LEGAL.md  Makefile  PRIVACY-CHANGES.md  README-MOLLYKIDS.md  README-ORIG.md  README-PRIVACY-MOD.md  README-iOS.md  README.md  RELEASE-NOTES.md  build.gradle  build.gradle.kts  build.sh  constants.gradle.kts  dependencies.gradle  dependencies.gradle.kts  deploy.sh  docker-compose.yml  gradle.properties  gradle.properties.docker  lint.xml  (+5 more)
.chglog/: CHANGELOG.tpl.md  config.yml
.emergent/: emergent.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android.yml  auto-merge-build.yml  auto-release.yml  ci.yml  diffuse.yml  docker.yml  fdroid-publish.yml  prerelease.yml  release.yml  reprocheck.yml  stale.yml  sync.yml  tagrelease.yml  test.yml
app/: build.gradle  build.gradle.kts  fix-profm.gradle  gradle.properties  lint-baseline.xml  lint.xml  static-ips.properties  witness-verifications.gradle
app/jni/: Android.mk  Application.mk
app/proguard/: proguard-dnsjava.pro  proguard.cfg
backend/: requirements.txt  server.py
baseline-profile/: build.gradle.kts
build-logic/: build.gradle.kts  gradle.properties  settings.gradle.kts
build-logic/plugins/: build.gradle.kts
build-logic/tools/: build.gradle.kts
buildSrc/: build.gradle.kts  settings.gradle.kts
cashu/: build.gradle.kts
certs/: debug.keystore
core-gms/base/: build.gradle.kts
core-gms/cloud-messaging/: build.gradle.kts
core-gms/safeparcel-processor/: build.gradle.kts
core-models/: build.gradle.kts
core-ui/: build.gradle.kts
core-util/: build.gradle
core-util-jvm/: build.gradle.kts
docs/: IMPLEMENTATION_STATUS.md  PRODUCTION_HARDENING_PLAN.md  README.md  SECURITY_AUDIT_CHECKLIST.md
fast-lint/: build.gradle.kts
frontend/: package.json
gradle/: libs.versions.toml  lint-libs.versions.toml  test-libs.versions.toml  verification-metadata.dryrun.xml  verification-metadata.xml
jni/: Android.mk  Application.mk
libfakegms/: build.gradle  build.gradle.kts  witness-verifications.gradle
libnetcipher/: build.gradle
libsignal-service/: build.gradle  build.gradle.kts
lintchecks/: build.gradle  build.gradle.kts
mk/: android.mk
reproducible-builds/: Dockerfile  README.md  docker-compose.yml
reproducible-builds/apkdiff/: apkdiff.py  pyproject.toml
scripts/: download_models.sh  download_models_v2.sh  generate_keys.sh  test_security.py
security-lib/: build.gradle.kts
security-lib/src/main/cpp/: CMakeLists.txt  cache_operations.cpp  cache_operations.h  el2_detector.cpp  el2_detector.h  jni_bridge.cpp  kyber1024.cpp  kyber1024.h  memory_scrambler.cpp  memory_scrambler.h  ml_dsa_87.cpp  ml_dsa_87.h  ml_dsa_87_production.cpp  ml_kem_1024.cpp  ml_kem_1024.h  ml_kem_1024_production.cpp  performance_counters.cpp  performance_counters.h  timing_obfuscation.cpp  timing_obfuscation.h
server/: Dockerfile.server  README.md  requirements.txt  translation_server.py
translation-lib/: README.md  build.gradle.kts
translation-lib/src/main/cpp/: CMakeLists.txt  int8_quantizer.cpp  jni_bridge_translation.cpp  model_loader.cpp  translation_engine.cpp  translation_engine.h
video/: build.gradle
(+4373 files in other folders)
